[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/gamenode.gd" type="Script" id=1]
[ext_resource path="res://assets/sprits/road.png" type="Texture" id=2]
[ext_resource path="res://scripts/playerCar.gd" type="Script" id=3]
[ext_resource path="res://assets/sprits/player/car1.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/loop_1.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/loop_5.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/Crash.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/fonts/font160.fnt" type="BitmapFont" id=8]
[ext_resource path="res://assets/sprits/buttons/transparentLight03.png" type="Texture" id=9]
[ext_resource path="res://assets/sprits/buttons/transparentDark03.png" type="Texture" id=10]
[ext_resource path="res://assets/sprits/buttons/transparentLight04.png" type="Texture" id=11]
[ext_resource path="res://assets/sprits/buttons/transparentDark04.png" type="Texture" id=12]
[ext_resource path="res://scenes/RivalCar.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/gerador.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]

resource/name = "Road"
length = 1.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Road/RoadBottom:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 363.202, 794.98 ), Vector2( 363.202, 1304.32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Road/RoadTop:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 363.778, -186.358 ), Vector2( 363.778, 321.086 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 64.1311, 140.23 )

[node name="Gamenode" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Road" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Road = SubResource( 1 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="RoadBottom" type="Sprite" parent="Road"]

transform/pos = Vector2( 363.202, 884.778 )
transform/rot = 90.0
transform/scale = Vector2( 0.479943, 0.479943 )
z/z = -3
texture = ExtResource( 2 )

[node name="RoadTop" type="Sprite" parent="Road"]

transform/pos = Vector2( 363.778, -96.8948 )
transform/rot = 90.0
transform/scale = Vector2( 0.479943, 0.479943 )
z/z = -3
texture = ExtResource( 2 )

[node name="PlayerCar" type="RigidBody2D" parent="."]

transform/pos = Vector2( 121.888, 1000 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )
positionCar = [ Vector2( 121.888, 1000 ), Vector2( 365, 1000 ), Vector2( 599.024, 1000 ) ]

[node name="Sprite" type="Sprite" parent="PlayerCar"]

transform/rot = 270.0
transform/scale = Vector2( 0.634223, 0.656049 )
z/z = -1
texture = ExtResource( 4 )

[node name="CollisionPlayer" type="CollisionShape2D" parent="PlayerCar"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="CarEngine" type="StreamPlayer" parent="PlayerCar"]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="CarCurve" type="StreamPlayer" parent="PlayerCar"]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="CarCrash" type="StreamPlayer" parent="PlayerCar"]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Grid" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="lblGrid" type="Label" parent="Grid"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 27.0
margin/top = 0.0
margin/right = 700.0
margin/bottom = 173.0
custom_fonts/font = ExtResource( 8 )
text = "3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StartRacing" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="SpeedUp" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="PointTime" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="Buttons" type="Node2D" parent="."]

editor/display_folded = true
z/z = 3

[node name="btnLeft" type="TouchScreenButton" parent="Buttons"]

transform/pos = Vector2( 45.7673, 1092.45 )
transform/scale = Vector2( 1.93322, 1.8281 )
z/z = 5
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="btnLeft1" type="TouchScreenButton" parent="Buttons"]

transform/pos = Vector2( 528.45, 1092.45 )
transform/scale = Vector2( 2.03465, 1.92401 )
z/z = 5
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Cars" type="Node2D" parent="."]

editor/display_folded = true
z/z = -1

[node name="RivalCar" parent="Cars" instance=ExtResource( 13 )]

transform/pos = Vector2( 872.253, -254.274 )
z/z = -1

[node name="Gerador" type="Position2D" parent="Cars"]

transform/pos = Vector2( 373.549, -220.247 )
script/script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="Cars/Gerador"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[connection signal="timeout" from="StartRacing" to="." method="_on_StartRacing_timeout"]

[connection signal="timeout" from="SpeedUp" to="." method="_on_SpeedUp_timeout"]

[connection signal="timeout" from="PointTime" to="." method="_on_PointTime_timeout"]

[connection signal="pressed" from="Buttons/btnLeft" to="PlayerCar" method="_on_btnLeft_pressed"]

[connection signal="pressed" from="Buttons/btnLeft1" to="PlayerCar" method="_on_btnLeft1_pressed"]

[connection signal="timeout" from="Cars/Gerador/Timer" to="Cars/Gerador" method="_on_Timer_timeout"]


